--- a/viteapp/package.json
+++ b/viteapp/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "react-scripts test"
      "start": "react-scripts start",
   "build": "react-scripts build"
     "dev": "vite",
