--- a/viteapp/package.json
+++ b/viteapp/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "react-scripts test"
      "start": "react-scripts start",
- 
+      "build": "react-scripts build"
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -28,4 +29,8 @@
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   }
+  "engines": {
+  "node": "16.x"
+}
+
 }
